--- a/angular.json
+++ b/angular.json
@@ -24,22 +24,22 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+                            // "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "./node_modules/ngx-toastr/toastr.css",
                             "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-                            "./node_modules/animate.css/animate.css",
+                            // "./node_modules/animate.css/animate.css",
                             "./node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
                             "./node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
                             "src/styles.scss"
                         ],
                         "scripts": [
                             "./node_modules/jquery/dist/jquery.min.js",
-                            "./node_modules/mdbootstrap/js/jquery.js",
-                            "./node_modules/mdbootstrap/js/bootstrap.js",
-                            "./node_modules/mdbootstrap/js/mdb.js",
-                            "./node_modules/mdbootstrap/js/popper.min.js",
-                            "./node_modules/chart.js/dist/Chart.js",
-                            "./node_modules/hammerjs/hammer.min.js",
+                            // "./node_modules/mdbootstrap/js/jquery.js",
+                            // "./node_modules/mdbootstrap/js/bootstrap.js",
+                            // "./node_modules/mdbootstrap/js/mdb.js",
+                            // "./node_modules/mdbootstrap/js/popper.min.js",
+                            // "./node_modules/chart.js/dist/Chart.js",
+                            // "./node_modules/hammerjs/hammer.min.js",
                             "./node_modules/jquery/dist/jquery.min.js"
                         ],
                         "es5BrowserSupport": true
@@ -93,24 +93,24 @@
                         "tsConfig": "src/tsconfig.spec.json",
                         "karmaConfig": "src/karma.conf.js",
                         "styles": [
-                            "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+                            // "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "./node_modules/ngx-toastr/toastr.css",
                             "./node_modules/font-awesome/scss/font-awesome.scss",
                             "./node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
                             "./node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-                            "./node_modules/animate.css/animate.css",
+                            // "./node_modules/animate.css/animate.css",
                             "./node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
                             "./node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
                             "src/styles.scss"
                         ],
                         "scripts": [
                             "./node_modules/jquery/dist/jquery.min.js",
-                            "./node_modules/mdbootstrap/js/jquery.js",
-                            "./node_modules/mdbootstrap/js/bootstrap.js",
-                            "./node_modules/mdbootstrap/js/mdb.js",
-                            "./node_modules/mdbootstrap/js/popper.min.js",
-                            "./node_modules/chart.js/dist/Chart.js",
-                            "./node_modules/hammerjs/hammer.min.js"
+                            // "./node_modules/mdbootstrap/js/jquery.js",
+                            // "./node_modules/mdbootstrap/js/bootstrap.js",
+                            // "./node_modules/mdbootstrap/js/mdb.js",
+                            // "./node_modules/mdbootstrap/js/popper.min.js",
+                            // "./node_modules/chart.js/dist/Chart.js",
+                            // "./node_modules/hammerjs/hammer.min.js"
                         ],
                         "assets": [
                             "src/favicon.ico",
